--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "erusev/parsedown": "^1.6",
         "fennb/phirehose": "^1.0",
+        "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.2",
         "knplabs/github-api": "^2.4",
         "laravel/framework": "5.5.*",
@@ -23,10 +24,10 @@
         "spatie/laravel-google-calendar": "^2.0",
         "spatie/laravel-tail": "^2.0",
         "spatie/laravel-twitter-streaming-api": "^0.0.2",
+        "spatie/laravel-uptime-monitor": "^3.0",
         "spatie/last-fm-now-playing": "^1.0",
         "spatie/packagist-api": "^1.0.1",
-        "spatie/valuestore": "^1.1",
-        "fideloper/proxy": "~3.3"
+        "spatie/valuestore": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
